infrastructure/home-assistant/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-forwarded-for
  namespace: home-assistant
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
